# biosamples-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
checklists/: default.json  human_sample.json
examples/: agent_workflow.py  ai_assisted_submission.py  claude_desktop_config.json  natural_language_search.py
src/: biosamples_client.py  checklist_validator.py  mcp_server.py  nlp_parser.py  server.py
src/models/: sample.py
src/tools/: fetch_tool.py  natural_search_tool.py  search_tool.py  smart_submit_tool.py  submit_tool.py
tests/: test_checklist_validator.py  test_fetch.py  test_natural_search.py  test_nlp_parser.py  test_search.py  test_smart_submit.py  test_submit.py
ui/: app.py
ui/pages/: 00_Architecture.py  01_search.py  02_fetch.py  03_ai_submit.py  04_nl_search.py
ui/utils/: __init__.py  api_client.py
